@@ -1307,6 +1307,12 @@ static int msWCSGetCoverage(mapObj *map, cgiRequestObj *request,
     return msWCSException(map, "MissingParameterValue", "crs", params->version);
   }
 
+  if(!params->time && !params->bbox.minx && !params->bbox.miny
+     && !params->bbox.maxx && !params->bbox.maxy) {
+    msSetError(MS_WCSERR, "One of BBOX or TIME is required", "msWCSGetCoverage()");
+    return msWCSException(map, "MissingParameterValue", "coverage", params->version);
+  }
+
   if( params->coverages == NULL || params->coverages[0] == NULL ) {
     msSetError( MS_WCSERR, 
                 "Required parameter COVERAGE was not supplied.", 
